# forge-requirements-intelligence

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/app/: api.py  config.py  database.py  domain_packs.py  exporters.py  jira.py  llm.py  main.py  mock_data.py  models.py  prompts.py  schemas.py  security.py
backend/scripts/: evaluate_corpus.py
backend/test_corpus/: features.json
backend/tests/: conftest.py  test_api.py  test_exporters.py
docs/: ARCHITECTURE.md  CLAIMS_CHECKLIST.md  DEPLOYMENT.md
frontend/: index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  styles.css  types.ts  utils.test.ts  utils.ts
