[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forge-requirements-api"
version = "1.0.0"
description = "Forge requirements intelligence backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.128,<1",
  "uvicorn[standard]>=0.34,<1",
  "pydantic>=2.10,<3",
  "pydantic-settings>=2.7,<3",
  "sqlalchemy>=2.0,<3",
  "psycopg[binary]>=3.2,<4",
  "anthropic>=0.75,<1",
  "httpx>=0.28,<1",
  "PyYAML>=6,<7",
  "cryptography>=44,<46",
  "python-dotenv>=1,<2"
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<10",
  "pytest-cov>=6,<8",
  "ruff>=0.9,<1"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
